# High-Performance-Trading-Simulator-with-PnL-Engine

./: CMakeLists.txt  README.md
data/: test_buy_only.csv  test_trades.csv  ticks.csv
src/: convert.cpp  engine.cpp  engine.h  execution.cpp  execution.h  loader.cpp  loader.h  main.cpp  position.cpp  position.h  strategy.h  trade.h
